hopefully that solved the issues on mobile

--- a/src/styles/anime.scss
+++ b/src/styles/anime.scss
@@ -264,7 +264,7 @@
     visibility: hidden;
     opacity: 0;
     filter: blur(5px);
-    transform: scale(5);
+    transform: scale(.1);
   }
 
   to {
@@ -287,6 +287,6 @@
     visibility: hidden;
     opacity: 0;
     filter: blur(5px);
-    transform: scale(5);
+    transform: scale(.1);
   }
 }
