--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,12 +24,9 @@
 
 body {
   background-color: var(--very-dark-blue);
+  min-height: 100vh;
   display: grid;
   place-items: center;
-  width: 100vw;
-  height: 100vh;
-  max-width: 100vw;
-  max-height: 100vh;
   overflow: hidden;
   position: relative;
 }
